--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@react-pdf/renderer": "^1.6.7",
     "firebase": "^6.6.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
